--- a/public/views/index.html
+++ b/public/views/index.html
@@ -37,7 +37,8 @@
 				<!-- Rendered View will go inside of ng-view -->
 				<ng-view flex ></ng-view>
 			</md-content>
-			<md-content class="md-padding" layout-align="center center">
+			<md-content ng-if="!octoService.client.isLoggedIn &&  isAtHome"
+			class="md-padding" layout-align="center center">
 				<div layout="column" layout-gt-sm="row" layout-wrap >
 					<md-card ng-repeat="user in octoService.cachedUsers" flex-xs="100" flex-md="40" flex-lg="30" flex-xl="20" class="cachedUsers" >
 						<md-card-title>
