--- a/public/views/myProfile.html
+++ b/public/views/myProfile.html
@@ -1,7 +1,6 @@
 
 <md-content 
-  layout-fill 
-  class="md-padding" layout="column" 
+  layout-padding layout="column" 
   ng-if="!octoService.client.isLoggedIn &&  atHome"
   layout-align="start center">
   <h1>Welcome to octoDex!</h1> 
@@ -24,7 +23,7 @@
           <div flex="33" flex-sm="100" >
             <img  ng-src="{{::user.avatar_url}}" alt="profile picture"/>
           </div>
-          <div layout="column"  class="md-padding" layout-align-sm="center center">
+          <div layout="column" layout-padding layout-align-sm="center center">
             <div>
               <span inline value="user.name" key="name" class="md-display-2 display-name inline"></span>
         <!--  Error Here when width is too long of both login -->
