--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,9 +18,8 @@
 		<title>OctoDex - Github Cards</title>
 	</head>
 	<body ng-cloak ng-controller="indexController" >
-
 		<div layout layout-fill>
-			<md-sidenav od-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right" md-is-locked-open="$mdMedia('gt-lg')"></md-sidenav>  
+			<md-sidenav od-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right" md-is-locked-open="$mdMedia('gt-lg')"></md-sidenav> 
 			<md-content layout="column" flex>
 			 	<md-toolbar layout md-scroll-shrink>
 					<md-button ng-if="isAtHome()" ng-click="redirect('/')">Back</md-button>
@@ -35,37 +34,13 @@
 			
 				<!-- <ng-view flex ></ng-view> -->
 				<ng-view flex ></ng-view>
-				<md-content ng-if="!octoService.client.isLoggedIn &&  isAtHome"
-				class="md-padding" layout-align="center center">
-					<div layout="column" layout-gt-sm="row" layout-wrap >
-						<md-card ng-repeat="user in octoService.cachedUsers" flex-xs="100" flex-md="40" flex-lg="30" flex-xl="20" class="cachedUsers" >
-							<md-card-title>
-								<md-card-title-text>
-									<span class="md-headline">{{user.name}}</span>
-									<span class="md-subhead">{{user.login}}</span>
-									<span>{{user.blog}}</span>
-									<span>{{user.email}}</span>
-									<span>{{user.login}}</span>
-									<span>{{user.company}}</span>
-									<span>{{user.location}}</span>
-									<span>{{user.updated_at|date}}</span>
-								</md-card-title-text>
-								<md-card-title-media>
-									<img ng-src="{{user.avatar_url}}" class="md-media-md card-media" alt="{{user.login}}"></img>
-								</md-card-title-media>
-							</md-card-title>
-							<md-card-actions layout="row" layout-align="end center">
-								<md-button ng-href="#profile/{{user.login}}">Visit Profile</md-button>
-								<md-button>Visit Repos</md-button>
-							</md-card-actions>
-						</md-card>
-					</div>
+				<md-content od-groups
+				ng-if="!octoService.client.isLoggedIn &&  isAtHome"
+				class="md-padding" layout-align="center center">	
 				</md-content>
 			</md-content>
-			
-			
 		</div>
-			
+		<div>
 			<script src="/js/octoModule.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/octoService.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/inlineDirective.js" type="text/javascript" charset="utf-8"></script>
@@ -73,6 +48,7 @@
 			<script src="/js/indexController.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/myProfileController.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/otherProfileController.js" type="text/javascript" charset="utf-8"></script>
+		</div>
 	</body>
 </html>
 
