--- a/public/views/odGroups.html
+++ b/public/views/odGroups.html
@@ -1,5 +1,5 @@
 <div layout="column" layout-gt-sm="row" layout-wrap >
-  <md-card ng-repeat="user in octoService.cachedUsers" flex-xs="100" flex-md="40" flex-lg="30" flex-xl="20" class="cachedUsers" >
+  <md-card ng-repeat="user in groups" flex-xs="100" flex-md="40" flex-lg="30" flex-xl="20" class="cachedUsers" >
     <md-card-title>
       <md-card-title-text>
         <span class="md-headline">{{user.name}}</span>
