Fixing Layout issues

--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -18,8 +18,8 @@
 	<md-list layout layout-wrap>
 		<md-button flex="100" ng-href="#profile/{{od.client.login}}" >
 			<div>
-				<span ng-if="::client.isLoggedIn">{{::client.login}} account</span>
-				<span ng-if="::!client.isLoggedIn">Account Page</span>
+				<span ng-if="client.isLoggedIn">{{::client.login}} account</span>
+				<span ng-if="!client.isLoggedIn">Account Page</span>
 				<md-divider></md-divider>
 			</div>
 		</md-button>
