--- a/public/views/profileView.html
+++ b/public/views/profileView.html
@@ -13,7 +13,7 @@
   </md-tab>
 
   <md-tab label="Repos">
-    <md-content od-repo
+    <md-content od-repos
     class="card-background md-padding" ng-if="true">
     </md-content>
   </md-tab>
