--- a/public/views/index.html
+++ b/public/views/index.html
@@ -20,7 +20,7 @@
 	<body ng-cloak ng-controller="indexController" >
 		<div layout layout-fill>
 			<md-sidenav od-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right" md-is-locked-open="$mdMedia('gt-lg')"></md-sidenav> 
-			<md-content layout="column" flex>
+			<md-content layout="column" flex class="main-wrap">
 			 	<md-toolbar layout md-scroll-shrink>
 					<md-button ng-if="isAtHome()" ng-click="redirect('/')">Back</md-button>
 					<div class="md-toolbar-tools">
@@ -32,14 +32,17 @@
 					</div>
 				</md-toolbar>
 			
-				<md-content layout="column">
+				<md-content>
 					<!-- <ng-view flex ></ng-view> -->
-					<ng-view flex ></ng-view>
-					<md-content od-groups groups="octoService.organizations.RefactorU"
+					<div flex>
+						<ng-view ></ng-view>
+					</div>
+					<md-content  od-groups groups="octoService.organizations.RefactorU"
 					ng-if="!octoService.client.isLoggedIn &&  isAtHome"
 					class="md-padding" layout-align="center center">	
 					</md-content>
 				</md-content>
+
 			</md-content> 
 		</div>
 		<div>
