--- a/public/views/index.html
+++ b/public/views/index.html
@@ -37,10 +37,10 @@
 					<div flex>
 						<ng-view ></ng-view>
 					</div>
-					<md-content  od-groups groups="octoService.organizations.RefactorU"
+					<!-- <md-content  od-groups groups="octoService.organizations.RefactorU"
 					ng-if="!octoService.client.isLoggedIn &&  isAtHome"
 					class="md-padding" layout-align="center center">	
-					</md-content>
+					</md-content> -->
 				</md-content>
 
 			</md-content> 
@@ -50,6 +50,7 @@
 			<script src="/js/octoService.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/inlineDirective.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/octoDirectives.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/js/groupController.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/indexController.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/myProfileController.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/otherProfileController.js" type="text/javascript" charset="utf-8"></script>
