Adding another view. AccountView to edit and add more information about the user.

--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -24,7 +24,7 @@
 			</div>
 		</md-button>
 
-		<md-button flex="100" ng-disabled="::true">
+		<md-button flex="100" ng-href="#account"ng-disabled="::false">
 			Edit Account
 			<md-divider></md-divider>
 		</md-button>
